bug fixed. working version with data assimilation. you need pyletkf.

--- a/config.ini
+++ b/config.ini
@@ -3,3 +3,20 @@ pfafunits = 58
 ndx = 20
 sbrate = 0.6
 n_ch_all = 1.0
+[model]
+nReach       = 58
+# number of reaches
+networkFile = ~/DA/missouli/pyHRR/network.csv
+# 
+[assimilation]
+nCpus        = 12
+# number of CPUs
+ensMem       = 10
+# number of ensemble members
+patchArea    = 50000
+# patch area size
+localPatchPath = ./localPatch.obj
+# path to the cached local patch file.
+[observation]
+obsPath = ./data/obs/qpred_spa.csv
+undef = -9999
