deleted unrelated files

--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,8 @@ n_ch_all = 1.0
 nReach       = 58
 # number of reaches
 networkFile = ~/DA/missouli/pyHRR/network.csv
-# 
+# river network csv
+rootDir = /home/yi79a/DA/missouli/pyHRR/
 [assimilation]
 nCpus        = 12
 # number of CPUs
@@ -18,5 +19,5 @@ patchArea    = 50000
 localPatchPath = ./localPatch.obj
 # path to the cached local patch file.
 [observation]
-obsPath = ./data/obs/qpred_spa.csv
+obsPath = ~/DA/missouli/pyHRR/data/obs/qpred_spa.csv
 undef = -9999
