--- a/config/config_MERIT_cal10.ini
+++ b/config/config_MERIT_cal10.ini
@@ -1,5 +1,5 @@
 [experiment]
-expName = MERITVIC_cal10
+expName = MSR_cal10
 [input]
 pfafunits = 28998
 ndx = 20
@@ -10,22 +10,25 @@ qlat_all = 1.0
 [model]
 nReach = 28998
 # number of reaches
-networkpath = /project/uma_colin_gleason/yuta/DA/missouri/pyHRR/network_MERIT.csv
+networkpath = /project/pi_cjgleason_umass_edu/yuta/ISDR/MSR/data/network_MERIT.csv
 # river network csv
 networktype = "csv"
 # network file type
-rootDir = /project/uma_colin_gleason/yuta/DA/missouri/pyHRR/
-# root Directory
+rootDir = /project/pi_cjgleason_umass_edu/yuta/ISDR/MSR/src/
+# root Directory for src codes
 nCpus = 20
-# number of CPUs
-srcDir = /project/uma_colin_gleason/yuta/DA/missouri/pyHRR/hillslope_src
+# number of CPU cores
+srcDir = /project/pi_cjgleason_umass_edu/yuta/ISDR/MSR/src/hillslope_src
 # model src directory
-channelPath = /project/uma_colin_gleason/yuta/DA/missouri/pyHRR/hillslope_src/channels.txt
+channelPath = /project/pi_cjgleason_umass_edu/yuta/ISDR/MSR/data/channels_missouri_rz.txt
 # channel informatioin file path
+planesPath = /project/pi_cjgleason_umass_edu/yuta/ISDR/MSR/data/planes.txt
+# catchment average slope file for hillslope module in HRR.
+# If you do not use hillslope module, ignore this and leave as it is.
 [IO]
 runoffDir = /nl/uma_colin_gleason/yuta/gridAssign/src/daily/meritvic_shyears/corrected/
 # runoff forcing directory
-outDir = /project/uma_colin_gleason/yuta/DA/missouri/pyHRR/out/
+outDir = /project/pi_cjgleason_umass_edu/yuta/DA/missouri/pyHRR/out/
 # output directory
 oFile = discharge.csv
 # output file for open loop
@@ -36,10 +39,10 @@ ensMem = 20
 # number of ensemble members
 patchArea = 50000
 # patch area size
-localPatchPath = /project/uma_colin_gleason/yuta/DA/missouri/pyHRR/localPatch_MERIT.obj
+localPatchPath = /project/pi_cjgleason_umass_edu/yuta/DA/missouri/pyHRR/localPatch_MERIT.obj
 # path to the cached local patch file.
-assimCacheDir = /project/uma_colin_gleason/yuta/DA/missouri/pyHRR/cache/
+assimCacheDir = /project/pi_cjgleason_umass_edu/yuta/DA/missouri/pyHRR/cache/
 # path where assimilation weights are cached
 [observation]
-obsPath = /project/uma_colin_gleason/yuta/DA/missouri/pyHRR/data/obs/bam_wgauge_1984_2010.csv
+obsPath = /project/pi_cjgleason_umass_edu/yuta/DA/missouri/pyHRR/data/obs/bam_wgauge_1984_2010.csv
 undef = -9999
