--- a/config/config_MERIT_cal10.ini
+++ b/config/config_MERIT_cal10.ini
@@ -12,7 +12,7 @@ nReach = 28998
 # number of reaches
 networkpath = /project/pi_cjgleason_umass_edu/yuta/ISRD/MSR/data/hrr/network_MERIT.csv
 # river network csv
-networktype = "csv"
+networktype = csv
 # network file type
 rootDir = /project/pi_cjgleason_umass_edu/yuta/ISRD/MSR/src/
 # root Directory for src codes
@@ -35,9 +35,9 @@ oFile = discharge.csv
 oFileAssim = dischargeAssim.csv
 # output file for assimilation
 [assimilation]
-ensMem = 3
+ensMem = 20
 # number of ensemble members
-patchArea = 50000
+patchArea = 5000
 # patch area size
 localPatchPath = /project/pi_cjgleason_umass_edu/yuta/ISRD/MSR/data/hrr/localPatch_MERIT.obj
 # path to the cached local patch file.
