[big fix] hillslope restarting

--- a/config/config_MERIT_cal10.ini
+++ b/config/config_MERIT_cal10.ini
@@ -39,7 +39,7 @@ ensMem = 20
 # number of ensemble members
 patchArea = 5000
 # patch area size
-localPatchPath = /project/pi_cjgleason_umass_edu/yuta/ISRD/MSR/data/hrr/localPatch_MERIT.hdf5
+localPatchPath = /project/pi_cjgleason_umass_edu/yuta/ISRD/MSR/data/hrr/localPatch_MERIT.obj
 # path to the cached local patch file.
 assimCacheDir = /project/pi_cjgleason_umass_edu/yuta/ISRD/MSR/cache/
 # path where assimilation weights are cached
