[Bug fix] data assimilation now uses daily mean discharge, not an instataneous value.

--- a/config/config_MERIT_cal10.ini
+++ b/config/config_MERIT_cal10.ini
@@ -1,8 +1,8 @@
 [experiment]
-expName = MSR_cal10
+expName = MSR_cal10_test
 [input]
 pfafunits = 28998
-ndx = 20
+ndx = 15
 sbrate = 0.6
 ks_all = 60
 n_ch_all = 1.0
@@ -10,39 +10,39 @@ qlat_all = 1.0
 [model]
 nReach = 28998
 # number of reaches
-networkpath = /project/pi_cjgleason_umass_edu/yuta/ISRD/MSR/data/hrr/network_MERIT.csv
+networkpath = /project/uma_colin_gleason/yuta/ISRD/MSR/data/hrr/network_MERIT.csv
 # river network csv
 networktype = csv
 # network file type
-rootDir = /project/pi_cjgleason_umass_edu/yuta/ISRD/MSR/src/
+rootDir = /project/uma_colin_gleason/yuta/ISRD/MSR/src/
 # root Directory for src codes
-nCpus = 20
+nCpus = 15
 # number of CPU cores
-srcDir = /project/pi_cjgleason_umass_edu/yuta/ISRD/MSR/src/hillslope_src/binaryio
+srcDir = /project/uma_colin_gleason/yuta/ISRD/MSR/src/hillslope_src/binaryio
 # model src directory
-channelPath = /project/pi_cjgleason_umass_edu/yuta/ISRD/MSR/data/hrr/channels_missouri_rz.txt
+channelPath = /project/uma_colin_gleason/yuta/ISRD/MSR/data/hrr/channels_missouri_rz.txt
 # channel informatioin file path
-planesPath = /project/pi_cjgleason_umass_edu/yuta/ISRD/MSR/data/hrr/planes.txt
+planesPath = /project/uma_colin_gleason/yuta/ISRD/MSR/data/hrr/planes.txt
 # catchment average slope file for hillslope module in HRR.
 # If you do not use hillslope module, ignore this and leave as it is.
 [IO]
-runoffDir = /project/pi_cjgleason_umass_edu/yuta/ISRD/MSR/data/runoff/meritvic_shyears/corrected/
+runoffDir = /project/uma_colin_gleason/yuta/ISRD/MSR/data/runoff/meritvic_shyears/corrected/
 # runoff forcing directory
-outDir = /project/pi_cjgleason_umass_edu/yuta/ISRD/MSR/out/
+outDir = /project/uma_colin_gleason/yuta/ISRD/MSR/out/
 # output directory
 oFile = discharge.csv
 # output file for open loop
 oFileAssim = dischargeAssim.csv
 # output file for assimilation
 [assimilation]
-ensMem = 20
+ensMem = 15
 # number of ensemble members
 patchArea = 5000
 # patch area size
-localPatchPath = /project/pi_cjgleason_umass_edu/yuta/ISRD/MSR/data/hrr/localPatch_MERIT.obj
+localPatchPath = /project/uma_colin_gleason/yuta/ISRD/MSR/data/hrr/localPatch_MERIT.obj
 # path to the cached local patch file.
-assimCacheDir = /project/pi_cjgleason_umass_edu/yuta/ISRD/MSR/cache/
+assimCacheDir = /project/uma_colin_gleason/yuta/ISRD/MSR/cache/
 # path where assimilation weights are cached
 [observation]
-obsPath = /project/pi_cjgleason_umass_edu/yuta/ISRD/MSR/data/obs/bam_wgauge_1984_2010.csv
+obsPath = /project/uma_colin_gleason/yuta/ISRD/MSR/data/obs/bam_wgauge_1984_2010.csv
 undef = -9999
