--- a/config/config_MERIT_uncal_hdf5_logdelta.ini
+++ b/config/config_MERIT_uncal_hdf5_logdelta.ini
@@ -1,10 +1,10 @@
 [experiment]
-expName = MSR_cal10_log
+expName = MSR_uncal_logdelta
 [input]
 pfafunits = 28998
 ndx = 10
 sbrate = 0.6
-ks_all = 60
+ks_all = 20
 n_ch_all = 1.0
 qlat_all = 1.0
 [model]
@@ -45,8 +45,8 @@ assimCacheDir = /project/uma_colin_gleason/yuta/ISRD/MSR/cache/
 # path where assimilation weights are cached
 take_log = true
 # assimilate in a log space?
-logdelta = false
+logdelta = true
 # True: xa = exp(log_xb_mean + bias); False: xa = exp(log_xb_mean) +/- exp(|bias|)
 [observation]
-obsPath = /project/uma_colin_gleason/yuta/ISRD/MSR/data/obs/bam_wgauge_1984_2010.csv
+obsPath = /project/uma_colin_gleason/yuta/ISRD/MSR/data/obs/bam_nogauge_1984_2010.csv
 undef = -9999
