--- a/config/config_MERIT_cal10_hdf5_logdelta.ini
+++ b/config/config_MERIT_cal10_hdf5_logdelta.ini
@@ -1,5 +1,5 @@
 [experiment]
-expName = MSR_cal10_log
+expName = MSR_cal10_logdelta
 [input]
 pfafunits = 28998
 ndx = 10
@@ -45,7 +45,7 @@ assimCacheDir = /project/uma_colin_gleason/yuta/ISRD/MSR/cache/
 # path where assimilation weights are cached
 take_log = true
 # assimilate in a log space?
-logdelta = false
+logdelta = true
 # True: xa = exp(log_xb_mean + bias); False: xa = exp(log_xb_mean) +/- exp(|bias|)
 [observation]
 obsPath = /project/uma_colin_gleason/yuta/ISRD/MSR/data/obs/bam_wgauge_1984_2010.csv
