--- a/config/config_MERIT_uncal_baseline.ini
+++ b/config/config_MERIT_uncal_baseline.ini
@@ -1,10 +1,10 @@
 [experiment]
-expName = MSR_cal10_log
+expName = baseline_uncal
 [input]
 pfafunits = 28998
 ndx = 10
 sbrate = 0.6
-ks_all = 60
+ks_all = 65
 n_ch_all = 1.0
 qlat_all = 1.0
 [model]
@@ -12,12 +12,8 @@ nReach = 28998
 # number of reaches
 networkpath = /project/uma_colin_gleason/yuta/ISRD/MSR/data/hrr/network_MERIT.csv
 # river network csv
-networktype = csv
-# network file type
 rootDir = /project/uma_colin_gleason/yuta/ISRD/MSR/src/
 # root Directory for src codes
-nCpus = 20
-# number of CPU cores
 srcDir = /project/uma_colin_gleason/yuta/ISRD/MSR/src/hillslope_src/binaryio/
 # model src directory
 channelPath = /project/uma_colin_gleason/yuta/ISRD/MSR/data/hrr/channels_missouri_rz.txt
@@ -26,27 +22,9 @@ planesPath = /project/uma_colin_gleason/yuta/ISRD/MSR/data/hrr/planes.txt
 # catchment average slope file for hillslope module in HRR.
 # If you do not use hillslope module, ignore this and leave as it is.
 [IO]
-runoffDir = /project/uma_colin_gleason/yuta/ISRD/MSR/data/runoff/meritvic_shyears/corrected/
+runoffDir = /project/uma_colin_gleason/yuta/ISRD/MSR/data/runoff/ctl/
 # runoff forcing directory
 outDir = /project/uma_colin_gleason/yuta/ISRD/MSR/out/
 # output directory
 oFile = discharge.nc
 # output file for open loop
-oFileAssim = dischargeAssim.nc
-# output file for assimilation
-[assimilation]
-ensMem = 20
-# number of ensemble members
-patchArea = 5000
-# patch area size
-localPatchPath = /project/uma_colin_gleason/yuta/ISRD/MSR/data/hrr/localPatch_MERIT.hdf5
-# path to the cached local patch file.
-assimCacheDir = /project/uma_colin_gleason/yuta/ISRD/MSR/cache/
-# path where assimilation weights are cached
-take_log = true
-# assimilate in a log space?
-logdelta = false
-# True: xa = exp(log_xb_mean + bias); False: xa = exp(log_xb_mean) +/- exp(|bias|)
-[observation]
-obsPath = /project/uma_colin_gleason/yuta/ISRD/MSR/data/obs/bam_wgauge_1984_2010.csv
-undef = -9999
